# SubstringSearcher

./: CMakeLists.txt  README.md  SubstringSearcher.pro
src/interface/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
